<resources>
    <string name="app_name">neutron</string>
    <string name="train_name">火车票查询</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">游客模式</string>
    <string name="nav_header_subtitle">此人很懒，什么都没留下</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="text_login">登陆</string>
    <string name="text_register">注册账号</string>
    <string name="text_login_username_hint">你的用户ID</string>
    <string name="text_login_password_hint">请输入密码</string>
    <string name="text_login_button">登陆</string>
    <string name="text_register_button">注册账号</string>

    <string name="text_menu_index">首页</string>
    <string name="text_menu_theme">主题</string>
    <string name="text_menu_setting">设置</string>
    <string name="text_menu_ticket">火车票</string>
    <string name="text_menu_booking">订单</string>

    <string name="title_activity_register">注册</string>
    <string name="text_register_name">你的用户名</string>
    <string name="text_register_password">请输入密码</string>
    <string name="text_register_email">你的邮箱</string>
    <string name="text_register_phone">你的手机号</string>
    <string name="text_register_confirm">请再次输入密码</string>

    <string name="text_setting">设置</string>
    <string name="text_query">查询</string>

    <string name="default_start">长沙南</string>
    <string name="default_end">上海虹桥</string>
    <string name="title_activity_pick_city">PickCityActivity</string>
    <string name="title_activity_info">用户信息</string>

    <string name="train_type_T">T(特快)</string>
    <string name="train_type_O">O(普通)</string>
    <string name="train_type_D">D(动车)</string>
    <string name="train_type_C">C(城际)</string>
    <string name="train_type_Z">Z(直达)</string>
    <string name="train_type_G">G(高铁)</string>
    <string name="train_type_K">K(快车)</string>
    <string name="all_choose">全选/全不选</string>
    <string name="title_activity_query_result">查询结果</string>
    <string name="title_activity_buy_ticket">购买车票</string>

    <string name="buy_ticket_tip_title">购票确认</string>

</resources>
