<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/imageMainView"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintTop_toBottomOf="@id/imageMainView"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/start_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="start"
            android:background="@null"
            android:layout_marginTop="8dp"
            android:layout_weight="3.5"
            android:text="@string/default_start"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            android:textSize="28sp"  />

        <Button
            android:id="@+id/switch_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/ic_swap_horiz_black"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/end_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:layout_weight="3.5"
            android:text="@string/default_end"
            android:textAlignment="textEnd"
            android:textColor="@color/colorBlack"
            android:textSize="28sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/time_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textSize="22sp"
        android:layout_gravity="start"
        android:textAlignment="textStart"
        android:background="@drawable/address_button"
        app:layout_constraintTop_toBottomOf="@id/address_layout" />

    <LinearLayout
        android:id="@+id/train_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/time_button" >

        <CheckBox
            android:id="@+id/train_type_T"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/train_type_T"
            android:textSize="15sp"/>

        <CheckBox
            android:id="@+id/train_type_Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/train_type_Z"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/train_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/train_1" >

        <CheckBox
            android:id="@+id/train_type_O"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/train_type_O"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/train_type_G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/train_type_G"
            android:textSize="15sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/train_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/train_2" >

        <CheckBox
            android:id="@+id/train_type_D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/train_type_D"
            android:textSize="15sp"/>

        <CheckBox
            android:id="@+id/train_type_K"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/train_type_K"
            android:textSize="15sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/train_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/train_3" >

        <CheckBox
            android:id="@+id/train_type_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/train_type_C"
            android:textSize="15sp"/>

        <CheckBox
            android:id="@+id/train_type_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="32dp"
            android:text="@string/all_choose"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/main_query_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/text_query"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:background="@drawable/login_button"
        app:layout_constraintTop_toBottomOf="@id/train_4" />

</android.support.constraint.ConstraintLayout>