<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteY="40dp" >
        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/text_register_name"
            android:inputType="text"  />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/register_name_wrapper"  >
        <EditText
            android:id="@+id/register_password"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/text_register_password"  />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_confirm_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/register_password_wrapper" >
        <EditText
            android:id="@+id/register_confirm"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/text_register_confirm"  />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_wrapper" >
        <EditText
            android:id="@+id/register_email"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/text_register_email"
            app:layout_constraintTop_toBottomOf="@id/register_confirm" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/register_email_wrapper" >
        <EditText
            android:id="@+id/register_phone"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPhonetic"
            android:hint="@string/text_register_phone"
            app:layout_constraintTop_toBottomOf="@id/register_email" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_now"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:textColor="@color/colorWhite"
        android:background="@drawable/login_button"
        android:text="@string/text_register"
        app:layout_constraintTop_toBottomOf="@id/register_phone_wrapper"/>


</android.support.constraint.ConstraintLayout>