<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_username_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_image" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/text_login_username_hint"
            android:inputType="text"
            tools:layout_editor_absoluteX="16dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_username_wrapper" >

        <EditText
            android:id="@+id/login_password"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/text_login_password_hint" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/login_password_wrapper" >

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/register_button"
            android:text="@string/text_register_button" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/login_button"
            android:text="@string/text_login_button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>